<resources>
    <string name="app_name">Phones app</string>
    <string name="manufacturer_label">Manufacturer</string>
    <string name="model_label">Model</string>
    <string name="android_version_label">Android version</string>
    <string name="web_site_label">Web site</string>
    <string name="web_site_bt_label">Web site</string>
    <string name="cancel_bt_label">Cancel</string>
    <string name="save_bt_label">Save</string>
    <string name="add_phone_button_description">Add phone</string>
    <string name="phone_row_manufacturer_placeholder">manufacturer</string>
    <string name="phone_row_model_placeholder">model info</string>
    <string name="error_empty_manufacturer">Manufacturer is required</string>
    <string name="error_empty_model">Model is required</string>
    <string name="error_empty_android_version">Android version is required</string>
    <string name="error_empty_web_site">Web site is required</string>
    <string name="error_invalid_web_site">Invalid web site. Should look like: http://www.example.com</string>
    <string name="open_web_site_error_empty">Cannot open. Web site is empty.</string>
    <string name="open_web_site_error_invalid">Cannot open. Web site is invalid.</string>
    <string name="delete_all_phones_menu_option">Clear all data</string>
    <string name="delete_all_confirm_btn">Delete all</string>
    <string name="delete_all_cancel_btn">Cancel</string>
    <string name="delete_all_dialog_text">Are you sure you want to clear all data?</string>
    <string name="all_phones_deleted">All phones deleted</string>
    <string name="phone_delete_error">Error while deleting phone</string>
</resources>